[package]
name = "arkaive"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
clap_complete = "4.5.38"
dirs = "5.0.1"
reqwest = { version = "0.12.9", features = ["cookies", "json"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_toml = "0.0.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
